Create example component and add it to homepage

--- a/app/tda-project-ui/src/app/app.component.html
+++ b/app/tda-project-ui/src/app/app.component.html
@@ -10,6 +10,10 @@
   <!-- You can edit this page, save it, and view the browser--it will automatically refresh the page! -->
   <!-- Also, take a look at /tda-project-ui/README.md to understand the other commands with Angular -->
 </div>
+
+<!-- This is an example component that retrieves data from the backend and displays it -->
+<app-example></app-example>
+
 <h2>Here are some Angular links to help you start: </h2>
 <ul>
   <li>
